// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openApiPyClientGenerator - additional properties > should emit dict[str, T] for plain additionalProperties objects > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never


Counts200Response = dict[str, int]

CountsError = Never
"
`;

exports[`openApiPyClientGenerator - additional properties > should handle object models with a mixture of properties and additionalProperties > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never

from pydantic import BaseModel, ConfigDict


class Mixed(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    id: str


MixedError = Never
"
`;
